--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,8 +6,16 @@ img {
 a {
   text-decoration: none;
 }
+
+/* ! ##### svg  ##### */
 svg {
   fill: currentColor;
+}
+.svg {
+  fill: var(--calm_state_svg);
+}
+.svg:hover {
+  fill: var(--accent_col);
 }
 .visually-hidden {
   position: absolute;
@@ -71,7 +79,9 @@ ul {
   margin: 0;
   padding: 0;
 }
-
+label {
+  position: relative;
+}
 .list {
   list-style: none;
   padding-left: 0;
@@ -79,7 +89,7 @@ ul {
 }
 
 address,
-.webstudio {
+.logo {
   font-style: normal;
 }
 
@@ -98,9 +108,7 @@ address,
   display: flex;
   align-items: baseline;
 }
-.our_team_text_container {
-  padding: 30px 0;
-}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -125,19 +133,19 @@ address,
 .Studio {
   color: var(--Studio_text);
 }
-.nav {
+.header-nav {
   margin-left: 93px;
 }
-.nav_list_block {
+.header-nav__list {
   display: flex;
 }
-.nav_list {
+.header-nav__item {
   position: relative;
 }
-.nav_list:not(:first-child) {
+.header-nav__item:not(:first-child) {
   margin-left: 50px;
 }
-.nav_text {
+.header-nav__link {
   font-weight: 500;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -152,18 +160,18 @@ address,
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav_text:hover,
-.nav_text:focus {
+.header-nav__link:hover,
+.header-nav__link:focus {
   color: var(--accent_col);
 }
-.contacts_header_list {
+.header-contacts__list {
   display: flex;
   margin-left: auto;
 }
-.contacts-item {
+.header-contacts__item {
   margin-right: 30px;
 }
-.contacts {
+.header-contacts__link {
   display: flex;
   align-items: center;
 
@@ -179,40 +187,16 @@ address,
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts:hover,
-.contacts:focus {
+.header-contacts__link:hover,
+.header-contacts__link:focus {
   color: var(--accent_col);
 }
-
-/* * ##### icon svg ##### */
-
-.icon_mail {
+.header-contacts__icon {
   width: 16px;
   height: 16px;
   margin-right: 10px;
 
   fill: currentColor;
-}
-.icon_phone {
-  width: 16px;
-  height: 16px;
-
-  margin-right: 10px;
-
-  fill: currentColor;
-}
-.traits_svg {
-  width: 70px;
-  height: 70px;
-}
-
-/* * ##### svg hover ##### */
-
-.svg {
-  fill: var(--calm_state_svg);
-}
-.svg:hover {
-  fill: var(--accent_col);
 }
 
 .current {
@@ -228,7 +212,9 @@ address,
   border-radius: 2px;
 }
 
-.main_bg {
+/* * hero */
+
+.hero {
   max-width: 1600px;
   height: 600px;
   margin: 0 auto;
@@ -245,7 +231,7 @@ address,
   background-position: center;
   background-size: cover;
 }
-.main_text {
+.hero_tittle {
   width: 696px;
   margin: 0 auto;
 
@@ -259,7 +245,7 @@ address,
   color: var(--btn_txt_cl);
 }
 
-.main-modal-btn {
+.hero__button {
   min-width: 200px;
   padding: 10px 32px;
   margin-top: 30px;
@@ -287,8 +273,8 @@ address,
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main-modal-btn:hover,
-.main-modal-btn:focus {
+.hero__button:hover,
+.hero__button:focus {
   color: var(--btn_txt_cl);
   background-color: var(--btn_bg_darker_cl);
   outline: none;
@@ -329,43 +315,7 @@ address,
   color: var(--Studio_text);
   background-color: #fff;
 }
-.modal-close-button {
-  position: absolute;
-
-  display: flex;
-  align-items: center;
-
-  top: 8px;
-  right: 8px;
-
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-
-  background-color: #ffffff;
-
-  /* transition-property: color;
-    transition-delay: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
-}
-.modal-close-button > svg {
-  width: 18px;
-  height: 18px;
-
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close-button:hover,
-.modal-close-button:focus {
-  color: var(--accent_col);
-}
-
-.modal-title {
+.modal__title {
   font-size: 20px;
   font-weight: 700;
   line-height: calc(23 / 20);
@@ -374,7 +324,7 @@ address,
 
   color: var(--Studio_text);
 }
-.modal-form {
+.modal__form {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -383,21 +333,6 @@ address,
 
   /* gap: 10px; */
 }
-
-.modal-svg {
-  position: absolute;
-
-  top: 32px;
-  left: 15px;
-
-  width: 18px;
-  height: 18px;
-
-  fill: var(--second-text-color);
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .modal-label {
   margin-bottom: 10px;
 }
@@ -405,22 +340,17 @@ address,
 .modal-label:hover .modal-svg {
   color: var(--accent_col);
 }
-.modal-label-last {
+.modal-label__last {
   margin-bottom: 20px;
 }
-
-label {
-  position: relative;
-}
-
-.input-name {
+.modal-label__text {
   font-size: 12px;
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
   padding-right: 100%;
   color: var(--undertittle_col);
 }
-.input-bar {
+.modal-label__input {
   width: 448px;
   height: 40px;
   margin-top: 4px;
@@ -433,11 +363,24 @@ label {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.input-bar:hover,
-.input-bar:focus {
+.modal-label__input:hover,
+.modal-label__input:focus {
   border-color: var(--accent_col);
 }
-.comment {
+.modal-label__icon {
+  position: absolute;
+
+  top: 32px;
+  left: 15px;
+
+  width: 18px;
+  height: 18px;
+
+  fill: var(--second-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__feedback {
   width: 448px;
   height: 138px;
   padding-left: 16px;
@@ -452,29 +395,29 @@ label {
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.comment:hover,
-.comment:focus {
+.modal__feedback:hover,
+.modal__feedback:focus {
   border-color: var(--accent_col);
 }
-
-/* ! #### */
-.label-form:focus-within .input,
-.label-form:hover .input {
+/* ! modal svg hover&focus */
+.modal-label:focus-within .modal-label__input,
+.modal-label:hover .modal-label__input {
   border: 1px solid var(--accent_col);
 }
-.label-form:focus-within .modal-svg,
-.label-form:hover .modal-svg {
+.modal-label:focus-within .modal-label__icon,
+.modal-label:hover .modal-label__icon {
   fill: var(--accent_col);
 }
 
-/* ! checkbox */
-.checkbox-cont {
+/* ? checkbox */
+
+.modal-checkbox__container {
   display: flex;
   flex-direction: row-reverse;
 
   margin-bottom: 30px;
 }
-.custom-checkbox {
+.modal-checkbox__checkbox {
   z-index: -1;
   opacity: 0;
 
@@ -484,12 +427,12 @@ label {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.custom-checkbox + .checkbox-label {
+.modal-checkbox__checkbox + .modal-checkbox__label {
   display: inline-flex;
   align-items: center;
   user-select: none;
 }
-.custom-checkbox + .checkbox-label::before {
+.modal-checkbox__checkbox + .modal-checkbox__label::before {
   content: '';
   display: inline-block;
   align-items: center;
@@ -514,49 +457,82 @@ label {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.custom-checkbox:checked + .checkbox-label::before {
+.modal-checkbox__checkbox:checked + .modal-checkbox__label::before {
   border-color: #0b76ef;
   background-color: #0b76ef;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
 /* ? стили при наведении курсора на checkbox */
-.custom-checkbox:not(:disabled):not(:checked) + label:hover::before {
+.modal-checkbox__checkbox:not(:disabled):not(:checked) + label:hover::before {
   border-color: var(--accent_col);
 }
 /* ? стили для активного состояния чекбокса (при нажатии на него) */
-.custom-checkbox:not(:disabled):active + label::before {
+.modal-checkbox__checkbox:not(:disabled):active + label::before {
   background-color: #b3d7ff;
   border-color: #b3d7ff;
 }
 /* ? стили для чекбокса, находящегося в фокусе */
-.custom-checkbox:focus + label::before {
+.modal-checkbox__checkbox:focus + label::before {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 /* ? стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
-.custom-checkbox:focus:not(:checked) + label::before {
+.modal-checkbox__checkbox:focus:not(:checked) + label::before {
   border-color: #80bdff;
 }
 /* ? стили для чекбокса, находящегося в состоянии disabled */
-.custom-checkbox:disabled + label::before {
+.modal-checkbox__checkbox:disabled + label::before {
   background-color: #e9ecef;
 }
 
-.checkbox-text {
+.modal-checkbox__text {
   line-height: calc(24 / 14);
 
   color: var(--contacts_col);
 }
-.checkbox-link {
+.modal-checkbox__link {
   line-height: calc(24 / 14);
   text-decoration-line: underline;
 
   color: var(--accent_col);
 }
 
-/* ! checkbox */
+.modal__closeBtn {
+  position: absolute;
 
-.submit-button {
+  display: flex;
+  align-items: center;
+
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  background-color: #ffffff;
+
+  /* transition-property: color;
+    transition-delay: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+}
+.modal_closeBtnIcon {
+  width: 18px;
+  height: 18px;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__closeBtn:hover,
+.modal__closeBtn:focus {
+  color: var(--accent_col);
+}
+
+.modal__submit {
   width: 200px;
   height: 50px;
 
@@ -581,8 +557,8 @@ label {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.submit-button:hover,
-.submit-button:focus {
+.modal__submit:hover,
+.modal__submit:focus {
   color: var(--btn_txt_cl);
   background-color: var(--btn_bg_darker_cl);
   outline: none;
@@ -590,11 +566,11 @@ label {
 }
 
 /* * ##### traits ##### */
-.traits_list_block {
+.main-traits__list {
   display: flex;
   gap: 30px;
 }
-.main-svg-box {
+.main-traits__svgContainer {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -607,7 +583,11 @@ label {
 
   margin-bottom: 30px;
 }
-.trait_text {
+.main-traits__icon {
+  width: 70px;
+  height: 70px;
+}
+.main-traits__title {
   font-weight: 700;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -615,36 +595,37 @@ label {
 
   margin-bottom: 10px;
 }
-.trait_downer_text {
+.main-traits__subtitle {
   width: 270px;
   line-height: 24px;
 
   color: var(--undertittle_col);
 }
 
-.wawd_block {
+/* * ##### wawd ##### */
+.main-wawd {
   text-align: center;
   padding-top: 0;
 }
-.wawd_tittle {
+.main-wawd__title {
   margin: 0 auto;
 
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
 }
-.wawd_list {
+.main-wawd__list {
   display: flex;
   margin-top: 50px;
 }
 
-.wawd_item_pic:not(:first-child) {
+.main-wawd__item:not(:first-child) {
   margin-left: 30px;
 }
-.wawd_item_pic {
+.main-wawd__item {
   position: relative;
 }
-.wawd-pic-desc {
+.main-wawd__description {
   position: absolute;
   bottom: 0px;
 
@@ -665,20 +646,21 @@ label {
 }
 
 /* * ##### our team sect ##### */
-.our_team_sect {
+.main-team {
   text-align: center;
   background-color: var(--our_team_bg_col);
 }
-.our_team_text {
+.main-team__text {
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
 }
-.our_team_list_block {
+
+.main-team__list {
   display: flex;
   margin-top: 50px;
 }
-.our_team_pic {
+.main-team__item {
   margin-left: 30px;
   background-color: #ffffff;
 
@@ -686,10 +668,13 @@ label {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.our_team_pic:first-child {
+.main-team__item:first-child {
   margin-left: 0;
 }
-.our_team_name_text {
+.main-team__textContainer {
+  padding: 30px 0;
+}
+.main-team__name {
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -697,7 +682,7 @@ label {
 
   margin-bottom: 10px;
 }
-.our_team_job_tittle {
+.main-team__job {
   font-weight: 400;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -708,21 +693,14 @@ label {
   color: var(--undertittle_col);
 }
 
-.our-team-list {
+.main-team__linkslist {
   display: flex;
   justify-content: center;
   gap: 10px;
 
   /* margin-bottom: 30px; */
 }
-
-.our-team-svg {
-  width: 20px;
-  height: 20px;
-  fill: currentColor;
-}
-
-.our-team-link {
+.main-team__link {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -737,16 +715,20 @@ label {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.our-team-link:hover,
-.our-team-link:focus {
+.main-team__link:hover,
+.main-team__link:focus {
   color: var(--btn_txt_cl);
   background-color: var(--accent_col);
+}
+.main-team__icon {
+  width: 20px;
+  height: 20px;
+  fill: currentColor;
 }
 
 /* * =========== customers ===========*/
 
-.customers-text {
+.main-customers__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 42px;
@@ -754,12 +736,12 @@ label {
 
   margin-bottom: 50px;
 }
-.customers-list {
+.main-customers__list {
   display: flex;
   justify-content: center;
   gap: 30px;
 }
-.customers-link {
+.main-customers__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -776,13 +758,13 @@ label {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.customers-link:hover,
-.customers-link:focus {
+.main-customers__link:hover,
+.main-customers__link:focus {
   color: var(--accent_col);
   border-color: var(--accent_col);
 }
 
-.customers-svg {
+.customers__icon {
   width: 106px;
   height: 106px;
 }
@@ -806,28 +788,10 @@ label {
 
   color: var(--blue);
 }
-.footer_Studio {
+.footer_studio {
   color: var(--btn_txt_cl);
 }
-
-.footer_contacts_item:not(:first-child) {
-  margin-top: 9px;
-}
-
-.footer_map {
-  line-height: 24px;
-
-  color: var(--btn_txt_cl);
-
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer_map:hover,
-.footer_map:focus {
-  color: var(--accent_col);
-}
-.footer_contacts {
+.footer__contacts {
   line-height: 24px;
 
   color: var(--footer_contacts_col);
@@ -836,12 +800,31 @@ label {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer_contacts:hover,
-.footer_contacts:focus {
+.footer__contacts:not(:first-child) {
+  margin-top: 9px;
+}
+.footer__contacts:hover,
+.footer__contacts:focus {
+  color: var(--accent_col);
+}
+.footer__map {
+  line-height: 24px;
+
+  color: var(--btn_txt_cl);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer__map:hover,
+.footer__map:focus {
   color: var(--accent_col);
 }
 
-.join-text {
+.footer-join {
+  margin-left: 70px;
+}
+.footer-join__text {
   font-weight: 700;
   line-height: 16px;
   text-transform: uppercase;
@@ -849,23 +832,20 @@ label {
 
   margin-bottom: 20px;
 }
-.join-footer {
-  margin-left: 70px;
-}
-.join-footer-item {
+.footer-join__item {
   fill: white;
 
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
 }
-.join-svg {
+.footer-join__link {
   color: white;
 }
 
-.subscription-footer {
+.footer-subscription {
   margin-left: auto;
 }
-.subscr-title {
+.footer-subscription__title {
   font-weight: 700;
   line-height: calc(16 / 14);
   text-transform: uppercase;
@@ -874,11 +854,11 @@ label {
   color: var(--btn_txt_cl);
 }
 
-.subscr-label {
+.footer-subscription__label {
   display: flex;
   color: var(--btn_txt_cl);
 }
-.subscr-label > input {
+.footer-subscription__label > input {
   width: 358px;
 
   padding-left: 16px;
@@ -896,12 +876,12 @@ label {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.subscr-label > input:hover,
-.subscr-label > input:focus {
+.footer-subscription__input:hover,
+.footer-subscription__input:focus {
   border-color: var(--accent_col);
 }
 
-.subscr-label > button {
+.footer-subscription__button {
   width: 200px;
   height: 50px;
   margin-left: 12px;
@@ -930,14 +910,15 @@ label {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.subscr-label > button:hover {
+.footer-subscription__button:hover {
   color: var(--btn_txt_cl);
   background-color: var(--btn_bg_darker_cl);
 }
-.subscr-label > button:focus {
+.footer-subscription__button:focus {
   color: var(--btn_txt_cl);
 }
-.subscr-svg {
+
+.footer-subscription__icon {
   width: 35px;
   padding-left: 10px;
 }
