--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,13 +98,6 @@ address {
   border: 2px solid var(--accent_col);
   border-radius: 2px;
 }
-.current_btn {
-  color: var(--btn_txt_cl);
-  background-color: var(--btn_bg_cl);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-}
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -1039,4 +1032,12 @@ address {
   line-height: calc(30 / 16);
 
   color: var(--undertittle_col);
+}
+/* ! don't move current_btn */
+.current_btn {
+  color: var(--btn_txt_cl);
+  background-color: var(--btn_bg_cl);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
