--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,18 @@ address {
   font-style: normal;
 }
 
+.current_btn {
+  color: #ffffff;
+  background-color: #2196f3;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.current {
+  color: #2196f3;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -479,29 +491,24 @@ address {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
-/* ? при наведении курсора на checkbox */
 .modal-checkbox__checkbox:not(:disabled):not(:checked) + label:hover::before {
   border-color: #2196f3;
 }
 
-/* ? активное состояние чекбокса (при нажатии на него) */
 .modal-checkbox__checkbox:not(:disabled):active + label::before {
   background-color: #b3d7ff;
   border-color: #b3d7ff;
 }
 
-/* ? в фокусе */
 .modal-checkbox__checkbox:focus + label::before {
   -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
           box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
-/* ? в фокусе и не в состоянии checked */
 .modal-checkbox__checkbox:focus:not(:checked) + label::before {
   border-color: #80bdff;
 }
 
-/* ? в состоянии disabled */
 .modal-checkbox__checkbox:disabled + label::before {
   background-color: #e9ecef;
 }
@@ -518,7 +525,6 @@ address {
   color: #2196f3;
 }
 
-/* * modal closeBtn */
 .modal__closeBtn {
   position: absolute;
   display: -webkit-box;
@@ -1011,8 +1017,6 @@ address {
   border: none;
   padding: 6px 22px;
   cursor: pointer;
-  color: #757575;
-  background-color: #f5f4fa;
   -webkit-transition-property: color, background-color, -webkit-box-shadow;
   transition-property: color, background-color, -webkit-box-shadow;
   transition-property: color, background-color, box-shadow;
@@ -1117,16 +1121,4 @@ address {
   font-size: 16px;
   line-height: 1.875;
   color: #757575;
-}
-
-.current_btn {
-  color: #ffffff;
-  background-color: var(--btn_bg_cl);
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-}
-
-.current {
-  color: #2196f3;
 }/*# sourceMappingURL=main.css.map */
