--- a/sass/main.scss
+++ b/sass/main.scss
@@ -62,16 +62,6 @@ svg {
 address {
   font-style: normal;
 }
-.current_btn {
-  color: $btn-text-col;
-  background-color: $btn-bg-col;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-}
-.current {
-  color: $accent-col;
-}
 
 .visually-hidden {
   position: absolute;
@@ -1056,4 +1046,16 @@ address {
   line-height: calc(30 / 16);
 
   color: $secondary-text-col;
+}
+// ! don't move ".current_btn" & ".current"
+.current_btn {
+  color: $btn-text-col;
+  background-color: $btn-bg-col;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.current {
+  color: $accent-col;
 }
