edit footer color

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -780,7 +780,7 @@ address {
   color: $accent-col;
 }
 .footer_studio {
-  color: $accent-col;
+  color: $btn-text-col;
 }
 .footer__contacts {
   line-height: 24px;
