--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import '../components/main';
 @import '../components/modal';
 @import '../components/traits';
+@import '../components/wawd';
 @import '../components/team';
 @import '../components/customers';
 
